--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -217,6 +217,10 @@
   padding: 12px 88.26px;
   background: #fe6a5b;
   border-radius: 8px;
+  transition: all 300ms linear;
+}
+.button_bio:hover{
+box-shadow:  0px 0px 15px #d85a4d;
 }
 .margin_icon{
   margin-top: 20px;
@@ -329,7 +333,17 @@ p {
   width: 120px;
   height: 120px;
 }
-
+.my_slider_card{
+  width: 350px;
+  height: 469px;
+  background: transparent;
+  padding: 30px;
+  border-radius: 0px 0px 48px 0px;
+  transition: all 300ms linear;
+}
+.my_card:hover .my_slider_card{
+  background: black;
+}
 .my_card {
   width: 350px;
   height: 469px;
@@ -344,7 +358,8 @@ p {
   /* overflow-y: hidden; */
 }
 .my_card:hover{
-  background: #000000;
+  border: transparent;
+  background: transparent;
   transform: rotate(3.3deg);
   position: absolute;
 }
@@ -357,11 +372,10 @@ p {
   bottom: auto;
   left: -50px;
   z-index: -10;
-  /* z-index: -50; */
+  transition: all 300ms linear;
 }
 .my_card:hover .news-img{
   display: block;
-  /* z-index: -50; */
 }
 .row_padding {
   padding-top: 40px;
@@ -377,24 +391,6 @@ p {
   transition: all 300ms linear;
   color: black;
 }
-
-/* .my_card:hover .news-img {
-  display: flex !important;
-  transition: 0.5s;
-  opacity: 5;
-} */
-/* .my_card .news-img {
-  position: absolute;
-  border-radius: 0px 0px 48px 0px;
-  transform: rotate(-5deg);
-  opacity: 0;
-  top: -100px;
-  bottom: auto;
-  display: none;
-  left: -50px;
-  transition: 0.5s;
-} */
-
 
 #backToTopBtn {
   position: fixed;
@@ -423,6 +419,9 @@ p {
   overflow-y: scroll;
 }
 @media (min-width:576px) {
+  .my_slider_card{
+    padding: 10px 35px 45px 0px;
+  }
       .img_wdth_section_real{
         width: 70%;
     }
@@ -464,6 +463,9 @@ p {
 }
 }
 @media (min-width:768px) {
+  .my_slider_card {
+    padding: 16px 35px 45px 25px;
+}
   .img_header{
     width: 70%;
     transform: translate(46% ,0%);
