--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -206,7 +206,7 @@ p {
   padding: 9px 0px;
 }
 .logo_w_180 {
-  width: 60% !important;
+  width: 48px !important;
 }
 .line {
   background-color: #fff;
@@ -220,62 +220,84 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0; 
 }
+.w_100{
+  width: 97.5% !important;
+}
 
 @media (max-width: 991px) {
-  label[for="menuicon"] {
-    cursor: pointer;
-    width: 34px;
-    height: 28px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 999 !important;
-  }
-  label[for="menuicon"] > span {
-    width: 33px !important;
-    height: 4px !important;
-    background-color: #fff;
-    z-index: 999 !important;
-  }
-  .sm-screen {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  .mobile_view {
+    position: absolute;
+    background-color: transparent;
+    backdrop-filter: blur(50px);
+    height: 100vh;
     width: 100%;
-    height: 100vh !important;
-    position: fixed;
-    background-color: #000;
     top: 0;
     left: -100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 300ms linear;
+    z-index: 5;
+}
+.z_7{
+  z-index: 7  ;
+}
+
+.overflow_hidden {
+    overflow: hidden;
+}
+  .menu span:nth-child(1) {
+    height: 4px;
+    width: 35px;
+    background-color: white;
+    display: block;
+}
+
+.menu span:nth-child(2) {
+    height: 4px;
+    width: 35px;
+    background-color: white;
+    display: block;
+}
+
+.menu span:nth-child(3) {
+    height: 4px;
+    width: 35px;
+    background-color: white;
+    display: block;
+}
+
+.menu span {
+    transition: 300ms linear;
+}
+
+.cross span:nth-child(1) {
+    transform: rotate(47deg) translateY(16px);
+    transition: 300ms linear;
+}
+
+.cross span:nth-child(2) {
+    transform: translateX(-100%);
     opacity: 0;
-    pointer-events: none;
-    transition: all 600ms ease-in-out;
-    z-index: 999;
-    overflow: hidden !important;
-  }
-  input[type="checkbox"]:checked + ul.sm-screen {
-    left: 0;
-    opacity: 1;
-    pointer-events: all;
-    z-index: 85 !important;
-  }
-  .ms-5 {
-    margin-left: 0 !important;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+    transition: 30ms linear;
+}
+
+.cross span:nth-child(3) {
+    transform: rotate(-42deg) translateY(-17px);
+    transition: 300ms linear;
+}
 }
 .real_estate {
   font-weight: 700;
   letter-spacing: 0.3em !important;
+  opacity: 0.8 !important;
 }
 
 .adovcate_text {
   font-weight: 800;
   letter-spacing: -0.05em;
-  line-height: 78% !important;
+  line-height: 112% !important;
 }
 
 .text_orange {
@@ -383,7 +405,7 @@ input[type=number]::-webkit-outer-spin-button {
   max-width: 900px !important;
 }
 .footer_logo_width {
-  width: 180px;
+  width: 115px;
 }
 .footer_line {
   width: 100%;
@@ -444,6 +466,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 @media (min-width: 576px) {
+  .gap_178 {
+    gap: 70px;
+  }
   .scroll_down {
     width: 7%;
   }
@@ -510,10 +535,16 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 @media (min-width: 1200px) {
+  .gap_178 {
+    gap: 280px;
+  }
   .logo_w_180 {
     width: 155px !important;
   }
   .team_page_logo {
+    width: 180px;
+  }
+  .footer_logo_width {
     width: 180px;
   }
 }
@@ -523,13 +554,16 @@ input[type=number]::-webkit-outer-spin-button {
     width: 100%;
   }
   .logo_w_180 {
-    width: 188px !important;
+    width: 180px !important;
   }
 }
 
 @media (min-width: 1480px) {
   .min_h_100 {
     min-height: 100vh;
+  }
+  .adovcate_text {
+    line-height: 78% !important;
   }
  
 }
