--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -426,9 +426,9 @@ p {
 
 #backToTopBtn {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  padding: 10px 10px;
+  bottom: 10px;
+  right: 10px;
+  padding: 2px 2px;
   background-color: #fe6a5b;
   border: none;
   border-radius:100%;
@@ -579,6 +579,11 @@ p {
 }
 }
 @media (min-width:768px) {
+  #backToTopBtn {
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 10px;
+  }
   .news-img{
     width: 90%;
   }
